extensions/wikia/Chat/css/Chat.scss
@import "../../../../skins/oasis/css/mixins/border-radius";
@import "../../../../skins/oasis/css/mixins/gradient";
@import "../../../../skins/oasis/css/core/reset";
@import "../../../../skins/oasis/css/core/color";
@import "../../../../skins/oasis/css/core/buttons";
@import "../../../../skins/oasis/css/core/typography";

$color-chat-gray: mix($color-text, $color-page);
$color-chat-you: mix($color-text, $color-page, 5);

._avatar {
	border: 1px solid $color-page-border;
}

body {
	background: $color-body;
	color: $color-text;
	font-family: Helvetica, Arial, sans-serif;
	font-size: 13px;
	margin: 0;
}

// Only ChatMods will have this class on body tag. Use it to augment the interface.
body.chat-mod {
	.UserStatsMenu .kickban {
		display: list-item;
	}
	// do not show kickban links for chatmods
	.UserStatsMenu.chat-mod .kickban {
		display: none;
	}
}

// A visual indication that we are forcing the page to connect to the prod node server.
body.on-prod {
	background-color: yellow;
	&:before {
		content: "==NOTE: CONNECTED TO PROD NODE SERVER ==";
	}
}

a {
	color: $color-links;
	&:hover {
		text-decoration: underline;
	}
}

.ChatHeader {
	@include border-radius-ne(5px);
	@include border-radius-nw(5px);
	background-color: $color-page;
	border: 1px solid $color-page-border;
	height: 40px;
	margin: 10px;
	position: relative;
	.wordmark {
		color: $color-links;
		font-size: 20px;
		line-height: 40px;
		margin-right: 150px;
		overflow: hidden;
		padding-left: 5px;
		text-overflow: ellipsis;
		white-space: nowrap;
		img {
			height: 30px;
			margin-top: 5px;
		}
		a:hover {
			text-decoration: none;
		}
	}
	.User {
		border-left: 1px solid $color-page-border;
		height: 26px;
		padding-bottom: 2px;
		padding-top: 2px;
		position: absolute;
		right: 0;
		top: 5px;
		width: 113px;
		img {
			vertical-align: middle;
		}
		.username {
			font-weight: bold;
		}
	}
}

.User {
	font-size: 12px;
	padding: 7px 5px 7px 32px;
	position: relative;
	img {
		@extend ._avatar;
		height: 22px;
		position: absolute;
		left: 5px;
		vertical-align: middle;
		width: 22px;
	}
	.username {
		display: block;
		overflow: hidden;
		text-overflow: ellipsis;
		white-space: nowrap;
	}
	.details {
		font-size: 11px;
	}
	.status {
		display: none;
	}
	&.chat-mod .username {
		background: url(/extensions/wikia/Chat/images/icon-chatmod.png) right center no-repeat;
		padding-right: 15px;
	}
	&.staff .username {
		background: url(/extensions/wikia/Chat/images/icon-staff.png) right center no-repeat;
		padding-right: 15px;
	}
	&.away {
		color: $color-chat-gray;
		.status {
			display: inline;
		}
	}
	.UserStatsMenu {
		display: none;	
	}
}	

#UserStatsMenu {
	position: absolute;
	z-index: 100;
}
.UserStatsMenu {
	background: $color-page;
	border: 3px solid $color-buttons;
	display: none;
	font-size: 12px;
	padding: 5px;
	&.chat-mod .kickban {
		display: none;
	}
	.kickban {
		display: none; // by default, do not display kickban link for anyone - override above for chatmods
	}
	.info {
		background: $color-menu-highlight;
		margin-bottom: 5px;
		padding: 5px 5px 5px 35px;
		position: relative;
		img {
			@extend ._avatar;
			height: 24px;
			position: absolute;
			left: 5px;
			top: 5px;
			width: 24px;
		}
		.username {
			display: block;
			font-weight: bold;
		}
		.edits {
			display: block;
		}
		.since {
			display: block;
		}
	}
	.actions {
		li {
			border-top: 1px solid $color-page-border;
			&:first-child {
				border-top: none;
			}
			a {
				display: block;
				padding: 5px;
				&:hover {
					background: $color-menu-highlight;
					text-decoration: none;
				}
			}
		}
	}
}

.WikiaPage {
	@include border-radius-se(5px);
	@include border-radius-sw(5px);
	background-color: $color-page;
	border: 1px solid $color-page-border;
	bottom: 10px;
	color: $color-text;
	left: 10px;
	position: absolute;
	right: 10px;
	top: 55px;
}

.Chat {
	border-right: 1px solid $color-page-border;
	border-bottom: 1px solid $color-page-border;
	bottom: 50px;
	left: 0;
	line-height: 1.4em;
	overflow: auto;
	position: absolute;
	right: 150px;
	top: 0;
	line-height: 1.4em;
	ul {
		bottom: 0;
	}
	li {
		min-height: 32px; //28px image, 1px padding, 1px border
		padding: 18px 15px 16px 55px;
		position: relative;
	}
	.continued {
		margin-bottom: -15px;
		min-height: 0;
		padding-top: 0;
		top: -15px;
		.avatar {
			display: none;
		}
		.username {
			display: none;
		}
	}
	.avatar {
		@extend ._avatar;
		height: 28px;
		left: 15px;
		position: absolute;
		top: 20px;
		width: 28px;
	}
	.username {
		display: block;
		font-weight: bold;
		&:after {
			content: ":";
		}
	}
	.message {
		white-space: pre;
	}
	.inline-alert {
		color: $color-chat-gray;
		font-weight: bold;
		min-height: 0;
		padding-bottom: 10px;
		padding-top: 10px;
		text-align: center;
		&:before {
			content: "~ ";
		}
		&:after {
			content: " ~";
		}
	}	
	.you {
		background: $color-chat-you;
	}
}

.Write {
	bottom: 0;
	height: 30px;
	left: 0;
	line-height: 30px;
	padding: 10px 0 10px 55px;
	position: absolute;
	right: 150px;
	img {
		@extend ._avatar;
		height: 28px;
		left: 15px;
		position: absolute;
		vertical-align: middle;
		width: 28px;
	}
	[name="message"] {
		border: 1px solid $color-page-border;
		height: 2.5em;
		resize: none;
		width: 98%;
	}
	input[type="submit"] {
		display: none;
	}
}

.Users {
	bottom: 0;
	overflow-y: auto;
	position: absolute;
	right: 0;
	top: 0;
	width: 150px;
	.User {
		min-height: 22px;
		&:hover {
			background: $color-menu-highlight;
			cursor: pointer;
		}
	}
}

